--- a/yopass/deployment.yaml
+++ b/yopass/deployment.yaml
@@ -16,11 +16,18 @@ spec:
       - name: yopass
         image: jhaals/yopass:11.4.6
         args:
-          - "--memcached=localhost:11211"
+          - "--memcached=yopass-memcached:11211"
           - "--port=8080"
         ports:
         - name: http
           containerPort: 8080
+        resources: 
+          limits:
+            cpu: 100m
+            memory: 50Mi
+          requests:
+            cpu: 100m
+            memory: 50Mi
       - name: yopass-memcached
         image: memcached:1.6.16
         args:
@@ -28,4 +35,11 @@ spec:
         ports:
         - name: memcached
           containerPort: 11211
+        resources: 
+        limits:
+          cpu: 100m
+          memory: 50Mi
+        requests:
+          cpu: 100m
+          memory: 50Mi
       restartPolicy: Always
