--- a/yopass/service.yaml
+++ b/yopass/service.yaml
@@ -20,3 +20,14 @@ spec:
   ports:
     - name: memcached
       port: 11211
+---
+kind: Service
+apiVersion: v1
+metadata: 
+  name: yopass-redis
+spec:
+  selector:
+    app.kubernetes.io/name: yopass-redis
+  ports:
+    - name: redis
+      port: 6379
