--- a/yopass/deployment.yaml
+++ b/yopass/deployment.yaml
@@ -16,7 +16,7 @@ spec:
       - name: yopass
         image: jhaals/yopass:11.4.6
         args:
-          - "--memcached=yopass-memcached:11211"
+          - "--redis=yopass-redis:6379"
           - "--port=8080"
         ports:
         - name: http
@@ -52,6 +52,40 @@ spec:
         ports:
         - name: memcached
           containerPort: 11211
+        resources: 
+          limits:
+            cpu: 100m
+            memory: 50Mi
+          requests:
+            cpu: 100m
+            memory: 50Mi
+      restartPolicy: Always
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: yopass-redis
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: yopass-redis
+  template:
+    metadata:
+      labels:
+        app.kubernetes.io/name: yopass-redis
+    spec:
+      containers:
+      - name: yopass-redis
+        image: redis:7.0.5-alpine
+        args:
+        - "--save 60 1"
+        - "--loglevel warning"
+        - "--maxmemory 48mb"
+        - "--maxmemory-policy noeviction"
+        ports:
+        - name: redis
+          containerPort: 6379
         resources: 
           limits:
             cpu: 100m
