--- a/yopass/deployment.yaml
+++ b/yopass/deployment.yaml
@@ -16,9 +16,9 @@ spec:
       - name: yopass
         image: jhaals/yopass:11.4.6
         args:
-          - "--database redis"
-          - "--redis yopass-redis://redis:6379/0"
-          - "--port 8080"
+          - "--database=redis"
+          - "--redis=yopass-redis://redis:6379/0"
+          - "--port=8080"
         ports:
         - name: http
           containerPort: 8080
