--- a/yopass/deployment.yaml
+++ b/yopass/deployment.yaml
@@ -66,7 +66,7 @@ spec:
             memory: 50Mi
         volumeMounts: 
           - name: redis-data
-            mountPath: /data
+            mountPath: /data/
       restartPolicy: Always
       volumes:
       - name: redis-data
