--- a/prometheus/deployment.yaml
+++ b/prometheus/deployment.yaml
@@ -34,12 +34,18 @@ spec:
           volumeMounts:
             - name: prometheus-config-volume
               mountPath: /etc/prometheus/
-              securityContext:
-                fsGroup: 65534
             - name: prometheus-storage-volume
               mountPath: /prometheus/
-              securityContext:
-                fsGroup: 65534
+      initContainers:
+      - name: change-ownership-container
+        image: busybox
+        command: ["/bin/chmod","-R","777", "/prometheus/"]
+        securityContext:
+          runAsUser: 0
+          privileged: true
+        volumeMounts:
+        - name: prometheus-storage-volume
+          mountPath: /prometheus/
       volumes:
         - name: prometheus-config-volume
           configMap:
