--- a/prometheus/service/ingressroute.yaml
+++ b/prometheus/service/ingressroute.yaml
@@ -19,7 +19,7 @@ spec:
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
-  name: yopass-https
+  name: prometheus-https
   namespace: tools
 spec:
   entryPoints:
