--- a/prometheus/crb/crb.yaml
+++ b/prometheus/crb/crb.yaml
@@ -2,6 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: prometheus
+  namespace: tools
 rules:
 - apiGroups: [""]
   resources:
@@ -30,4 +31,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: default
-  namespace: monitoring
+  namespace: tools
