--- a/prometheus/configmap/configmap.yaml
+++ b/prometheus/configmap/configmap.yaml
@@ -23,12 +23,6 @@ data:
       evaluation_interval: 30s
     rule_files:
       - /etc/prometheus/prometheus.rules
-    alerting:
-      alertmanagers:
-      - scheme: http
-        static_configs:
-        - targets:
-          - "alertmanager.monitoring.svc:9093"
 
     scrape_configs:
       - job_name: 'node-exporter'
@@ -157,3 +151,11 @@ data:
         - source_labels: [__meta_kubernetes_service_name]
           action: replace
           target_label: kubernetes_name
+
+
+#    alerting:
+#      alertmanagers:
+#      - scheme: http
+#        static_configs:
+#        - targets:
+#          - "alertmanager.monitoring.svc:9093"
