--- a/grafana/deployment.yaml
+++ b/grafana/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: grafana
-        image: grafana/grafana:latest
+        image: grafana/grafana:9.2.4
         ports:
         - name: grafana
           containerPort: 3000
